change index.html path

--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,11 @@
             Libs css
         -->
         <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
+        <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" />
         <!--
             Custome css
         -->
         <link rel = "stylesheet" href = "/stylesheets/main.css" />
-        <link rel = "stylesheet" href = "/stylesheets/loading.css" />
         <!--
             End Stylesheets
         -->
@@ -37,8 +36,8 @@
             Start Libs js
         -->
         <script src = "https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-        <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+        <script src = "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+        <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
         <!--
             End Libs js
         -->
@@ -56,12 +55,12 @@
         <!--
             End JS Required
         -->
-		<div id = "root"></div>
+        <div id = "root"></div>
         <script src = "http://localhost:35729/livereload.js"></script><!-- remove this line in production ENV -->
         <!--
             Scripts
         -->
-		<script src = "/js/index.min.js"></script>
+        <script src = "/js/index.min.js"></script>
         <script src = "/js/main.min.js"></script>
         <!--
             End Scripts
